--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,9 +1,6 @@
----js
-const eleventyNavigation = {
-	key: "Archive",
-	order: 2
-};
----
+{# ---js
+const eleventyNavigation = { key: "Archive", order: 2 };
+--- #}
 <h1>Archive</h1>
 
 {% set postslist = collections.posts %}
