--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+
 /* Defaults */
 :root {
 	--font-family: -apple-system, system-ui, sans-serif;
@@ -6,32 +7,38 @@
 
 /* Theme colors */
 :root {
+
 	--color-gray-20: #e0e0e0;
 	--color-gray-50: #C0C0C0;
+	--color-gray-70: rgba(0,0,0,.7);
 	--color-gray-90: #333;
 
 	--background-color: #fff;
 
 	--text-color: var(--color-gray-90);
+	--text-color-muted: var(--color-gray-50);
 	--text-color-link: #082840;
 	--text-color-link-active: #5f2b48;
 	--text-color-link-visited: #17050F;
 
 	--syntax-tab-size: 2;
+
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--color-gray-20: #e0e0e0;
-		--color-gray-50: #C0C0C0;
-		--color-gray-90: #dad8d8;
+
+		/* --color-gray-20: #e0e0e0; */
+		/* --color-gray-50: #C0C0C0; */
+		/* --color-gray-90: #dad8d8; */
+
+		/* --background-color: #15202b; */
 
 		/* --text-color is assigned to --color-gray-_ above */
-		--text-color-link: #1493fb;
-		--text-color-link-active: #6969f7;
-		--text-color-link-visited: #a6a6f8;
+		/* --text-color-link: #1493fb; */
+		/* --text-color-link-active: #6969f7; */
+		/* --text-color-link-visited: #a6a6f8; */
 
-		--background-color: #15202b;
 	}
 }
 
@@ -113,6 +120,18 @@ a[href]:hover,
 a[href]:active {
 	color: var(--text-color-link-active);
 }
+
+/* .muted > a[href],
+.muted > a[href]:visited,
+.muted > a[href]:hover,
+.muted > a[href]:active,
+a[href].muted,
+a[href]:visited.muted,
+a[href]:hover.muted,
+a[href]:active.muted
+{
+	color: var(--text-color-muted);
+} */
 
 main,
 footer {
@@ -276,7 +295,7 @@ header {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	text-transform: capitalize;
+	/* text-transform: capitalize; */
 	font-style: italic;
 }
 .postlist-item > .post-tag {
@@ -296,3 +315,12 @@ header {
 	margin-right: 1em;
 }
 
+.icon {
+	vertical-align: text-bottom;
+	width: 1.25rem;
+	margin-bottom: -.125rem;
+}
+
+.muted {
+	color: var(--text-color-muted);
+}
